--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     - preload images
   -->
   <link rel="preload" as="image" href="./assets/images/hero-bg.jpg">
-  <link rel="preload" as="image" href="./assets/images/stock.jpg">
+<!--   <link rel="preload" as="image" href="./assets/images/stock.jpg"> -->
   <link rel="preload" as="image" href="./assets/images/hero-slide-2.jpg">
   <link rel="preload" as="image" href="./assets/images/hero-slide-3.jpg">
 
