--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
   <!-- 
     - preload images
-  -->
+<!--   -->
   <link rel="preload" as="image" href="./assets/images/hero-bg.jpg">
 <!--   <link rel="preload" as="image" href="./assets/images/stock.jpg"> -->
   <link rel="preload" as="image" href="./assets/images/hero-slide-2.jpg">
-  <link rel="preload" as="image" href="./assets/images/hero-slide-3.jpg">
+  <link rel="preload" as="image" href="./assets/images/hero-slide-3.jpg"> -->
 
 </head>
 
@@ -165,8 +165,8 @@
 
                   <div class="hero-card">
                     <figure class="img-holder" style="--width: 575; --height: 550;">
-                      <img src="./assets/images/stock.jpg" width="575" height="550" alt="hero banner"
-                        class="img-cover">
+<!--                       <img src="./assets/images/stock.jpg" width="575" height="550" alt="hero banner" -->
+<!--                         class="img-cover"> -->
                     </figure>
 
                     <!-- <button class="play-btn" aria-label="play adex intro">
