--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
                   <div class="hero-card">
                     <figure class="img-holder" style="--width: 575; --height: 550;">
-                      <img src="./assets/images/hindware.png" width="575" height="550" alt="hero banner" -->
+                      <img src="./assets/css/hindware.png" width="575" height="550" alt="hero banner" -->
 <!--                         class="img-cover">
                     </figure>
 
