--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 
                   <div class="hero-card">
                     <figure class="img-holder" style="--width: 575; --height: 550;">
-                      <img src="./assets/css/hindware.png" width="575" height="550" alt="hero banner" -->
-<!--                         class="img-cover">
+                      <img src="./assets/css/hindware.png" width="575" height="550" alt="hero banner" 
+            class="img-cover">
                     </figure>
 
                     <!-- <button class="play-btn" aria-label="play adex intro">
