--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
             </li>
 
             <li>
-              <div class="project-card">
+<!--               <div class="project-card">
                   <div class="card-content" style="width:100%">
                     <section class="contact" id="contact" style="width:100%">
                         <div class="row" style="width:100%" >
@@ -600,7 +600,7 @@
                         </div>
                     </section>
                   </div>
-                </div>
+                </div> -->
             </li>
             <script>
               function send(){
