--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                 </li>
 
-                <li class="slider-item">
+<!--                 <li class="slider-item">
 
                   <div class="hero-card">
                     <figure class="img-holder" style="--width: 575; --height: 550;">
@@ -172,9 +172,9 @@
                     <!-- <button class="play-btn" aria-label="play adex intro">
                       <ion-icon name="play" aria-hidden="true"></ion-icon>
                     </button> -->
-                  </div>
+<!--                   </div> -->
 
-                </li>
+<!--                 </li>  -->
 
                 <!-- <li class="slider-item">
 
