--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     - primary meta tags
   -->
   <title>Mani Distributes</title>
-  <meta name="title" content="Adex">
+  <meta name="title" content="Mani Distributes">
   <meta name="description" content="This is a Service agency which provides services related with Plumbing and electrical.">
 
   <!-- 
@@ -705,7 +705,7 @@
         </a>
 
         <p class="footer-text">
-          &copy; 2024 Reshi. <br> All rights reserved.
+          &copy; 2024 Applifiles Technology Solutions <br> All rights reserved.
         </p>
 
         <!-- <ul class="social-list">
